# Gittyup

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  LICENSE.md.in  README.md  changelog.md  cl-fmt.sh  com.github.Murmele.Gittyup.yml  index.md  setup-env.sh
dep/: CMakeLists.txt
dep/cmark/: CMakeLists.txt
dep/git/: CMakeLists.txt
dep/hunspell/: CMakeLists.txt
dep/libgit2/: CMakeLists.txt  rebaseGittyupLibgit2.sh
dep/libssh2/: CMakeLists.txt
dep/lpeg/: CMakeLists.txt
dep/lpeg/lpeg-1.1.0/: makefile
dep/lua/: CMakeLists.txt
dep/lua/lua-5.4.0/src/: ldebug.c  lparser.c  lvm.c
dep/scintilla/: CMakeLists.txt
dep/scintilla/scintilla/: .editorconfig  .hg_archival.txt  .hgtags  cppcheck.suppress
dep/scintilla/scintilla/call/: ScintillaCall.cxx
dep/scintilla/scintilla/cocoa/: DictionaryForCF.h
dep/scintilla/scintilla/doc/: AddSource.txt  Privacy.html  Scintilla5Migration.html  StyleMetadata.html
dep/scintilla/scintilla/gtk/: DepGen.py  ScintillaGTK.h  ScintillaGTKAccessible.cxx  ScintillaGTKAccessible.h  Wrappers.h
dep/scintilla/scintilla/include/: ILoader.h  Sci_Position.h  Scintilla.h  ScintillaCall.h  ScintillaMessages.h  ScintillaStructures.h  ScintillaTypes.h
dep/scintilla/scintilla/scripts/: CheckMentioned.py  Dependencies.py  HeaderCheck.py  HeaderOrder.txt  ScintillaAPIFacer.py
dep/scintilla/scintilla/src/: AutoComplete.h  CallTip.h  CellBuffer.h  ChangeHistory.cxx  ChangeHistory.h  CharacterCategoryMap.cxx  CharacterCategoryMap.h  CharacterType.cxx  CharacterType.h  DBCS.cxx  DBCS.h  Debugging.h  Document.h  EditModel.cxx  EditModel.h  EditView.cxx  EditView.h  Editor.cxx  Editor.h  ElapsedPeriod.h  Geometry.cxx  Geometry.h  Indicator.cxx  Indicator.h  KeyMap.h  MarginView.cxx  MarginView.h  Platform.h  Position.h  PositionCache.h  ScintillaBase.h  SparseVector.h  SplitVector.h  UndoHistory.cxx  UndoHistory.h  UniqueString.cxx  UniqueString.h  ViewStyle.h
dep/scintilla/scintilla/test/: win32Tests.py
dep/scintilla/scintilla/test/gi/: filter-scintilla-h.py  gi-test.py  makefile
dep/scintilla/scintilla/test/unit/: Sci.natvis  UnitTester.cxx  UnitTester.vcxproj  test.mak  testCellBuffer.cxx  testCharacterCategoryMap.cxx  (+8 more)
dep/scintilla/scintilla/win32/: DepGen.py  HanjaDic.cxx  HanjaDic.h  ListBox.cxx  ListBox.h  Scintilla.vcxproj  ScintillaDLL.cxx  ScintillaWin.cxx  ScintillaWin.h  SurfaceD2D.cxx  SurfaceD2D.h  SurfaceGDI.cxx  SurfaceGDI.h  WinTypes.h  nmdeps.mak  scintilla.mak
l10n/: CMakeLists.txt  gittyup_de.ts  gittyup_en.ts  gittyup_es.ts  gittyup_ja.ts  gittyup_pt.ts  gittyup_pt_BR.ts  gittyup_ru.ts  gittyup_zh_CN.ts  languages.cpp.inc  languages.h
src/: CMakeLists.txt  qtsupport.h  trace.h
src/app/: Application.cpp  Application.h  Application_mac.mm  CMakeLists.txt  CustomTheme.cpp  Gittyup.cpp  Theme.cpp  Theme.h
src/cli/: CMakeLists.txt
src/conf/: CMakeLists.txt  Constants.h  RecentRepositories.cpp  RecentRepository.cpp  RecentRepository.h  Setting.cpp  Setting.h  Settings.cpp  Settings.h
src/cred/: CMakeLists.txt  Cache.cpp  Cache.h  CredentialHelper.cpp  CredentialHelper.h  GitCredential.cpp  GitCredential.h  Store.cpp  Store.h
src/dialogs/: AboutDialog.cpp  AmendDialog.cpp  AmendDialog.h  CMakeLists.txt  ConfigDialog.cpp  DeleteBranchDialog.cpp  DeleteTagDialog.cpp  DiffPanel.cpp  ExternalToolsDialog.cpp  HotkeysPanel.cpp  IconLabel.cpp  NewBranchDialog.cpp  PatchDialog.cpp  PatchDialog.h  RemoteDialog.cpp  RenameBranchDialog.cpp  RenameBranchDialog.h  SettingsDialog.cpp  StartDialog.cpp  SubmoduleTableModel.cpp  ThemeDialog.cpp
src/editor/: CMakeLists.txt  LexLPeg.cpp  PlatQt.cpp  PlatQt.h  ScintillaQt.cpp  ScintillaQt.h  TextEditor.cpp  TextEditor.h
src/git/: Blame.cpp  Blame.h  Blob.cpp  Blob.h  Branch.cpp  Buffer.cpp  Buffer.h  CMakeLists.txt  Commit.cpp  Commit.h  Config.cpp  Config.h  Diff.cpp  Diff.h  Filter.cpp  Id.cpp  Id.h  Index.cpp  Index.h  Object.cpp  Patch.cpp  Patch.h  Rebase.cpp  Rebase.h  Reference.cpp  Reference.h  Remote.cpp  Remote.h  Repository.cpp  Repository.h  RevWalk.cpp  Signature.cpp  Signature.h  Submodule.cpp  Submodule.h
src/host/: Account.cpp  CMakeLists.txt  GitLab.cpp  Repository.h
src/index/: CMakeLists.txt  GenericLexer.cpp  Index.cpp  Index.h  MmapFileReader.cpp  MmapFileReader.h  Query.cpp  WorkerQueue.h  indexer.cpp  lexer_test.cpp
src/index/Indexer/: CMakeLists.txt  common.cpp  common.h  diffgrabber.cpp  diffgrabber.h  idstorage.cpp  idstorage.h  indexer.cpp  indexer.h  lexerpool.cpp  lexerpool.h  main.cpp  map.cpp  map.h  reduce.cpp  reduce.h  resultwriter.cpp  resultwriter.h
src/log/: CMakeLists.txt  LogDelegate.cpp  LogModel.cpp  LogView.cpp
src/plugins/: CMakeLists.txt  Plugin.cpp
src/tools/: CMakeLists.txt  DiffTool.cpp  DiffTool.h  EditTool.cpp  EditTool.h  ExternalTool.cpp  ExternalTool.h  MergeTool.cpp  MergeTool.h  ShowTool.cpp  ShowTool.h
src/ui/: AdvancedSearchWidget.cpp  Badge.cpp  Badge.h  BlameEditor.cpp  BlameEditor.h  BlameMargin.cpp  CMakeLists.txt  ColumnView.cpp  CommitEditor.cpp  CommitEditor.h  CommitList.cpp  CommitList.h  CommitToolBar.cpp  ConfigKeys.cpp  ConfigKeys.h  DetailView.cpp  DiffTreeModel.cpp  DiffTreeModel.h  DiffView.cpp  DiffWidget.cpp  DoubleTreeWidget.cpp  DoubleTreeWidget.h  EditorWindow.cpp  FileContextMenu.cpp  FileContextMenu.h  FindWidget.cpp  IgnoreDialog.h  IndexCompleter.cpp  MainWindow.cpp  MainWindow.h  MenuBar.cpp  MenuBar.h  ReferenceModel.cpp  ReferenceView.cpp  ReferenceView.h  ReferenceWidget.cpp  ReferenceWidget.h  RemoteCallbacks.cpp  RemoteCallbacks.h  RepoView.cpp  (+22 more)
src/ui/DiffView/: Comment.cpp  DiffView.cpp  DiffView.h  EditButton.cpp  EditButton.h  EditorHandler.cpp  EditorHandler.h  FileWidget.cpp  FileWidget.h  HunkHeader.cpp  HunkHeader.h  HunkWidget.cpp  HunkWidget.h  Images.cpp
src/update/: CMakeLists.txt  UpdateDialog.cpp  Updater.cpp  Updater.h  Updater_mac.mm  relauncher.cpp
src/util/: CMakeLists.txt  Debug.cpp  Debug.h  Path.cpp
src/watcher/: CMakeLists.txt  RepositoryWatcher_linux.cpp  RepositoryWatcher_qt.cpp  RepositoryWatcher_win.cpp
(+37 files in other folders)
